codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_balance_status_line.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Balance CNY 110.00                                                            "
